<resources>
    <string name="app_name">Unit Converter</string>
    <string name="value_to_convert">Value to convert</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="fluid_ounces_us">Fluid Ounces (US)</string>
    <string name="measuring_Cups">Cups</string>
    <string name="gallons_us">Gallons (US)</string>
    <string name="milliliters">Milliliters</string>
    <string name="grams">Grams</string>
    <string name="liters">Liters</string>
    <string name="round_up">Round Up</string>
    <string name="convert">Convert</string>
</resources>